<resources>
    <string name="app_name">OhSheet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTitle">OhSheet !!!</string>
    <string name="txtTitleAdmin">ADMIN</string>
    <string name="createSong">Create Song</string>
    <string name="createGenre">Create Genre</string>
    <string name="listSong">Show List Song</string>
    <string name="listGenre">Show List Genre</string>
    <string name="etWriter">Writer</string>
    <string name="etTitleSong">Name</string>
    <string name="linkMusic">etLinkMusic</string>
    <string name="etContent">etContent</string>
    <string name="createGenres">Create Genre</string>
    <string name="btnSaveCreateSong">Save</string>
    <string name="nameGenre">Name</string>
    <string name="btnSaveGenre">Save</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtLogin">Login</string>
    <string name="hintName">Username</string>
    <string name="hintPass">Password</string>
    <string name="hintConfirmPass">Confirm Password</string>
    <string name="hintSong">Name song</string>
    <string name="checkRem">Remember me</string>
    <string name="notAdmin">I\'m not an Admin</string>
    <string name="isAdmin">I\'m an Admin?</string>
    <string name="txtRegister">Register</string>
    <string name="txtCreate">Create Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="addImageOfGenre">Add Image</string>
    <string name="updatesong">Update</string>
    <string name="deletesong">Delete</string>
    <string name="updategenre">Update</string>
    <string name="deletegenre">Delete</string>
    <string name="addContent">Add Content</string>
    <string name="chords">Chords</string>
    <string name="addImg">Add Image</string>
    <string name="alert">Alert</string>
    <string name="imageContent">image</string>
    <string name="link">Link</string>
    <string name="textNav">Oh Sheet</string>
    <string name="textViewLv">Độ khó</string>
</resources>