<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="100dp"
        android:text="@string/txtRegister"
        android:textSize="29sp"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="60dp" />


    <LinearLayout
        android:id="@+id/linerLayoutIcon"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:layout_below="@+id/textView2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_profile"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_password"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linerLayoutContent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etUserNameRegister"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/hintName"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/etPassWordRegister"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/etCfPassWord"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hintConfirmPass"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterClick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_below="@id/linerLayoutContent"
        android:background="@color/colorLightBlue"
        android:fontFamily="@font/alike"
        android:textColor="#F1F3F4"
        android:textSize="18sp"
        android:text="@string/txtCreate"
        />

</RelativeLayout>