<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context=".view.ActivityAdmin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/android"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitleAdmin"
            android:layout_width="254dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:fontFamily="cursive"
            android:text="@string/txtTitleAdmin"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCreateSong"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="253dp"
            android:layout_marginBottom="40dp"
            android:text="@string/createSong"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCreateGenre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="36dp"
            android:text="@string/createGenre"
            app:layout_constraintBottom_toTopOf="@+id/btnListSong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateSong" />

        <Button
            android:id="@+id/btnListSong"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="31dp"
            android:text="@string/listSong"
            app:layout_constraintBottom_toTopOf="@+id/btnListGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateGenre" />

        <Button
            android:id="@+id/btnListGenre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="79dp"
            android:text="@string/listGenre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnListSong" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>